--- a/templates/pages/administration.html.twig
+++ b/templates/pages/administration.html.twig
@@ -1,4 +1,4 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>Bienvenue sur la homepage</h1>
+    <h1>Bienvenue sur l'administration</h1>
 {% endblock %}
