--- a/templates/pages/Booking/index.html.twig
+++ b/templates/pages/Booking/index.html.twig
@@ -26,7 +26,7 @@
                     <td>
                         <a href="{{ path('booking.edit', {id:booking.id}) }}" class="btn btn-success">Editer</a>
                         <form method="post" action="{{ path('booking.delete', {id:booking.id} ) }}" style="display: inline-block"
-                              onsubmit="return confirm('Êtes vous vraiment sûr de vouloir supprimer cet utilisateur?')">
+                              onsubmit="return confirm('Êtes vous vraiment sûr de vouloir supprimer cet reservation ?')">
                             <input type="hidden" name="_method" value="DELETE">
                             <input type="hidden" name="_token" value="{{ csrf_token('delete'~ booking.id) }}">
                             <button class="btn btn-danger"> SUPPRIMER</button>
