--- a/templates/pages/User/index.html.twig
+++ b/templates/pages/User/index.html.twig
@@ -7,6 +7,7 @@
         {% for message in app.flashes('success') %}
             <div class="alert alert-success">{{ message }}</div>
         {% endfor %}
+        <div class="table-responsive">
         <table class="table table-striped">
             <thead>
             <tr>
@@ -33,7 +34,7 @@
             {% endfor %}
             </tbody>
         </table>
-
+        </div>
         <div class="text-right">
             <a href="{{ path('user.create') }}" class="btn btn-primary"> Ajouter un utilisateur</a>
         </div>
