--- a/templates/pages/User/preBooking.html.twig
+++ b/templates/pages/User/preBooking.html.twig
@@ -8,7 +8,7 @@
 
 
         <div class="col-sm-6 col-md-6 col-xl-4 mb-3">
-            <div class="card text-white bg-primary mb-3 mx-auto" style="max-width: 25rem;">
+            <div class="card text-white bg-info mb-3 mx-auto" style="max-width: 25rem;">
                 <div class="card-body mx-auto">
 
                     <div class="align-middle text-center">
@@ -22,7 +22,7 @@
 
         </div>
         <div class="col-sm-6 col-md-6 col-xl-4 mb-3  ">
-            <div class="card text-white bg-primary mb-3  mx-auto" style="max-width: 25rem;">
+            <div class="card text-white bg-info mb-3  mx-auto" style="max-width: 25rem;">
                 <div class="card-body mx-auto">
 
                     <div class="align-middle text-center">
