--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -1,4 +1,16 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>Bienvenue sur la homepage</h1>
+    <div class="px-4 py-5 my-5 text-center">
+
+        <h1 class="display-5 fw-bold">Bienvenue au Centre Culturel</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">Veuillez vous identifier pour avoir accès à l'interface d'administration.</p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <form action="{{ path('app_login') }}" method="get">
+                    <button type="submit" class="btn btn-outline-secondary btn-lg px-4">Connexion</button>
+                </form>
+
+            </div>
+        </div>
+    </div>
 {% endblock %}
