--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,8 +47,9 @@
 
                 </ul>
 
-                        <a class="ms-auto link-light active" href="{{ path('app_logout') }}">Deconnexion</a>
+                        <a class="ms-auto link-light active" href="{{ path('app_logout') }}">Deconnexion</a>&nbsp;
                 {% endif %}
+                <button type="button" class="btn btn-dark" id="horloge"></button>
             </div>
         </div>
     </nav>
@@ -60,5 +61,23 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        window.onload=function() {
+            horloge('horloge');
+        };
+
+        function horloge(el) {
+            if(typeof el=="string") { el = document.getElementById(el); }
+            function actualiser() {
+                var date = new Date();
+                var str = date.getHours();
+                str += ':'+(date.getMinutes()<10?'0':'')+date.getMinutes();
+                str += ':'+(date.getSeconds()<10?'0':'')+date.getSeconds();
+                el.innerHTML = str;
+            }
+            actualiser();
+            setInterval(actualiser,1000);
+        }
+    </script>
     </body>
 </html>
