--- a/templates/pages/Booking/new.html.twig
+++ b/templates/pages/Booking/new.html.twig
@@ -12,11 +12,12 @@
         <div class="col-lg-12 text-center mx-auto">
             <h1>Création d'une reservation</h1>
             <p>&nbsp;</p>
+            {% for message in app.flashes('error') %}
+                <div class="alert alert-danger"><b>{{ message }}</b></div>
+            {% endfor %}
         </div>
 
-        {% for message in app.flashes('error') %}
-            <div class="alert alert-danger">{{ message }}</div>
-        {% endfor %}
+
         <div class="col-lg-6 mx-auto">
         {{ form_start(form) }}
         {{ form_widget(form) }}
